{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 820,
  "lineage": "3f2ca01b-396d-d91d-a4a5-ce8d938fda73",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "84.232.135.193/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2200085732",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eda496de83f0a07f",
            "security_group_rule_id": "sgr-0d6740735a330d764",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-3000-ip4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-2817851465",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eda496de83f0a07f",
            "security_group_rule_id": "sgr-032b414389bc60e80",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-3000-ip6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3000,
            "id": "sgrule-556237109",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eda496de83f0a07f",
            "security_group_rule_id": "sgr-0117f1912b0403c1a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-80-ip4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3007133732",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eda496de83f0a07f",
            "security_group_rule_id": "sgr-05b4ff196dc8b09ab",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-80-ip6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-745627859",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eda496de83f0a07f",
            "security_group_rule_id": "sgr-050637d478fcb602e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb-ingress-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "84.232.135.193/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1707516472",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07c7d372c33a28d9f",
            "security_group_rule_id": "sgr-0f2ffe12b9fb68bbd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb-ingress-3000-ip4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-3030251158",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07c7d372c33a28d9f",
            "security_group_rule_id": "sgr-0dd751be3b643875b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb-ingress-3000-ip6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3000,
            "id": "sgrule-4244543640",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07c7d372c33a28d9f",
            "security_group_rule_id": "sgr-0205b69ea77568227",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb-ingress-80-ip4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-461848168",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07c7d372c33a28d9f",
            "security_group_rule_id": "sgr-04a643bc342f21828",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb-ingress-80-ip6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-3938953104",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07c7d372c33a28d9f",
            "security_group_rule_id": "sgr-0a519999914ea72e0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:529351201608:loadbalancer/app/terraform-loadbalancer/481d2601189d7007",
            "arn_suffix": "app/terraform-loadbalancer/481d2601189d7007",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-loadbalancer-1812443070.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:529351201608:loadbalancer/app/terraform-loadbalancer/481d2601189d7007",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07c7d372c33a28d9f",
              "sg-0eda496de83f0a07f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08db95061b5062b66"
              },
              {
                "subnet_id": "subnet-0966302b8dca9300d"
              },
              {
                "subnet_id": "subnet-09beac8f5727ae97d"
              }
            ],
            "subnets": [
              "subnet-08db95061b5062b66",
              "subnet-0966302b8dca9300d",
              "subnet-09beac8f5727ae97d"
            ],
            "tags": {
              "Name": "terraform-loadbalancer"
            },
            "tags_all": {
              "Name": "terraform-loadbalancer"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-06e4dd9217e765e3e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:529351201608:listener/app/terraform-loadbalancer/481d2601189d7007/524f6c57df9f3172",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:529351201608:targetgroup/terraform-targetgroup/25945e8e1bdb411f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:529351201608:listener/app/terraform-loadbalancer/481d2601189d7007/524f6c57df9f3172",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:529351201608:loadbalancer/app/terraform-loadbalancer/481d2601189d7007",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:529351201608:targetgroup/terraform-targetgroup/25945e8e1bdb411f",
            "arn_suffix": "targetgroup/terraform-targetgroup/25945e8e1bdb411f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:529351201608:targetgroup/terraform-targetgroup/25945e8e1bdb411f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-targetgroup",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "terraform-targetgroup"
            },
            "tags_all": {
              "Name": "terraform-targetgroup"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.public_1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:529351201608:targetgroup/terraform-targetgroup/25945e8e1bdb411f-20230519121300175100000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:529351201608:targetgroup/terraform-targetgroup/25945e8e1bdb411f",
            "target_id": "i-06fffdb439d1a4513"
          },
          "dependencies": [
            "module.alb.aws_lambda_permission.lb",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "0.public_2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:529351201608:targetgroup/terraform-targetgroup/25945e8e1bdb411f-2023051912130029890000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:529351201608:targetgroup/terraform-targetgroup/25945e8e1bdb411f",
            "target_id": "i-0801ea016c961d839"
          },
          "dependencies": [
            "module.alb.aws_lambda_permission.lb",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "0.public_3",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:529351201608:targetgroup/terraform-targetgroup/25945e8e1bdb411f-20230519121300054900000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:529351201608:targetgroup/terraform-targetgroup/25945e8e1bdb411f",
            "target_id": "i-0e5ff7c0b934f590a"
          },
          "dependencies": [
            "module.alb.aws_lambda_permission.lb",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:security-group/sg-07c7d372c33a28d9f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07c7d372c33a28d9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "84.232.135.193/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-loadbalancer-20230519121225363200000001",
            "name_prefix": "terraform-loadbalancer-",
            "owner_id": "529351201608",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-loadbalancer"
            },
            "tags_all": {
              "Name": "terraform-loadbalancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09744628bed84e434",
            "arn": "arn:aws:ec2:eu-west-2:529351201608:instance/i-06fffdb439d1a4513",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06fffdb439d1a4513",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "learner-api-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09b2e1a78dc9ec0bf",
            "private_dns": "ip-172-31-0-249.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.0.249",
            "public_dns": "ec2-35-178-61-233.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.61.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04dbfb5319aacd2d7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0966302b8dca9300d",
            "tags": {
              "Name": "terraform-exention-ec2-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "terraform-exention-ec2-1",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "terraform-exention-ec2-1"
            },
            "vpc_security_group_ids": [
              "sg-07c7d372c33a28d9f",
              "sg-0eda496de83f0a07f"
            ]
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09744628bed84e434",
            "arn": "arn:aws:ec2:eu-west-2:529351201608:instance/i-0801ea016c961d839",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0801ea016c961d839",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "learner-api-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09fcc5be55392246b",
            "private_dns": "ip-172-31-2-60.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.60",
            "public_dns": "ec2-13-40-74-87.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.74.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0912ca664fd2261b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09beac8f5727ae97d",
            "tags": {
              "Name": "terraform-exention-ec2-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "terraform-exention-ec2-2",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "terraform-exention-ec2-2"
            },
            "vpc_security_group_ids": [
              "sg-07c7d372c33a28d9f",
              "sg-0eda496de83f0a07f"
            ]
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[2]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09744628bed84e434",
            "arn": "arn:aws:ec2:eu-west-2:529351201608:instance/i-0e5ff7c0b934f590a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e5ff7c0b934f590a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "learner-api-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0262527fb78d74a9d",
            "private_dns": "ip-172-31-4-234.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.4.234",
            "public_dns": "ec2-18-133-170-84.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.170.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-005c72525ec15648b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08db95061b5062b66",
            "tags": {
              "Name": "terraform-exention-ec2-3",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "terraform-exention-ec2-3",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "terraform-exention-ec2-3"
            },
            "vpc_security_group_ids": [
              "sg-07c7d372c33a28d9f",
              "sg-0eda496de83f0a07f"
            ]
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:network-acl/acl-07d1b03831402a77a",
            "default_network_acl_id": "acl-07d1b03831402a77a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07d1b03831402a77a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "529351201608",
            "subnet_ids": [
              "subnet-03f8ad19406218719",
              "subnet-07a8f6ec6d5752055",
              "subnet-08db95061b5062b66",
              "subnet-0966302b8dca9300d",
              "subnet-09beac8f5727ae97d",
              "subnet-0e35c11e02ebf4462"
            ],
            "tags": {
              "Name": "terraform_extension-default"
            },
            "tags_all": {
              "Name": "terraform_extension-default"
            },
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:route-table/rtb-0d09d346e3093c03d",
            "default_route_table_id": "rtb-0d09d346e3093c03d",
            "id": "rtb-0d09d346e3093c03d",
            "owner_id": "529351201608",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform_extension-default"
            },
            "tags_all": {
              "Name": "terraform_extension-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:security-group/sg-0eda496de83f0a07f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0eda496de83f0a07f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "529351201608",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_extension-default"
            },
            "tags_all": {
              "Name": "terraform_extension-default"
            },
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0455198feb7ffa4cd",
            "association_id": "eipassoc-0809438f5431a7bbe",
            "domain": "vpc",
            "id": "eipalloc-0455198feb7ffa4cd",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0b752a3948d9d2c93",
            "private_dns": "ip-172-31-0-80.eu-west-2.compute.internal",
            "private_ip": "172.31.0.80",
            "public_dns": "ec2-18-132-220-233.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.220.233",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform_extension-eu-west-2a"
            },
            "tags_all": {
              "Name": "terraform_extension-eu-west-2a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014d362befab43ed7",
            "association_id": "eipassoc-0a0bba3737cfc016d",
            "domain": "vpc",
            "id": "eipalloc-014d362befab43ed7",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-05eca7a1542b364d1",
            "private_dns": "ip-172-31-2-62.eu-west-2.compute.internal",
            "private_ip": "172.31.2.62",
            "public_dns": "ec2-18-132-4-172.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.4.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform_extension-eu-west-2b"
            },
            "tags_all": {
              "Name": "terraform_extension-eu-west-2b"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a32261b92bf418e",
            "association_id": "eipassoc-0d0f8ee4e46611975",
            "domain": "vpc",
            "id": "eipalloc-07a32261b92bf418e",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-007203ee2c84c94c5",
            "private_dns": "ip-172-31-4-88.eu-west-2.compute.internal",
            "private_ip": "172.31.4.88",
            "public_dns": "ec2-35-177-25-180.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.25.180",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform_extension-eu-west-2c"
            },
            "tags_all": {
              "Name": "terraform_extension-eu-west-2c"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:internet-gateway/igw-0a2538a2f2c179fc5",
            "id": "igw-0a2538a2f2c179fc5",
            "owner_id": "529351201608",
            "tags": {
              "Name": "terraform_extension"
            },
            "tags_all": {
              "Name": "terraform_extension"
            },
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0455198feb7ffa4cd",
            "association_id": "eipassoc-0809438f5431a7bbe",
            "connectivity_type": "public",
            "id": "nat-0c308df476934facc",
            "network_interface_id": "eni-0b752a3948d9d2c93",
            "private_ip": "172.31.0.80",
            "public_ip": "18.132.220.233",
            "subnet_id": "subnet-0966302b8dca9300d",
            "tags": {
              "Name": "terraform_extension-eu-west-2a"
            },
            "tags_all": {
              "Name": "terraform_extension-eu-west-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014d362befab43ed7",
            "association_id": "eipassoc-0a0bba3737cfc016d",
            "connectivity_type": "public",
            "id": "nat-070c051a2a6bc8f5e",
            "network_interface_id": "eni-05eca7a1542b364d1",
            "private_ip": "172.31.2.62",
            "public_ip": "18.132.4.172",
            "subnet_id": "subnet-09beac8f5727ae97d",
            "tags": {
              "Name": "terraform_extension-eu-west-2b"
            },
            "tags_all": {
              "Name": "terraform_extension-eu-west-2b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a32261b92bf418e",
            "association_id": "eipassoc-0d0f8ee4e46611975",
            "connectivity_type": "public",
            "id": "nat-0a16b5220062e0698",
            "network_interface_id": "eni-007203ee2c84c94c5",
            "private_ip": "172.31.4.88",
            "public_ip": "35.177.25.180",
            "subnet_id": "subnet-08db95061b5062b66",
            "tags": {
              "Name": "terraform_extension-eu-west-2c"
            },
            "tags_all": {
              "Name": "terraform_extension-eu-west-2c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a865fb4201fabd311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c308df476934facc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a865fb4201fabd31",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06404d0e70a0d4d5a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-070c051a2a6bc8f5e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06404d0e70a0d4d5a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d2802ba06b3005f81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a16b5220062e0698",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2802ba06b3005f8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a2538a2f2c179fc5",
            "id": "r-rtb-0dfd7dfd9cddfab671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dfd7dfd9cddfab67",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:route-table/rtb-0a865fb4201fabd31",
            "id": "rtb-0a865fb4201fabd31",
            "owner_id": "529351201608",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c308df476934facc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_extension-private-eu-west-2a"
            },
            "tags_all": {
              "Name": "terraform_extension-private-eu-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:route-table/rtb-06404d0e70a0d4d5a",
            "id": "rtb-06404d0e70a0d4d5a",
            "owner_id": "529351201608",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-070c051a2a6bc8f5e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_extension-private-eu-west-2b"
            },
            "tags_all": {
              "Name": "terraform_extension-private-eu-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:route-table/rtb-0d2802ba06b3005f8",
            "id": "rtb-0d2802ba06b3005f8",
            "owner_id": "529351201608",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a16b5220062e0698",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_extension-private-eu-west-2c"
            },
            "tags_all": {
              "Name": "terraform_extension-private-eu-west-2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:route-table/rtb-0dfd7dfd9cddfab67",
            "id": "rtb-0dfd7dfd9cddfab67",
            "owner_id": "529351201608",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2538a2f2c179fc5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_extension-public"
            },
            "tags_all": {
              "Name": "terraform_extension-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9d25eeede684d5b",
            "route_table_id": "rtb-0a865fb4201fabd31",
            "subnet_id": "subnet-0e35c11e02ebf4462"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09935b8116e79fb7b",
            "route_table_id": "rtb-06404d0e70a0d4d5a",
            "subnet_id": "subnet-03f8ad19406218719"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078d1d8685518f72b",
            "route_table_id": "rtb-0d2802ba06b3005f8",
            "subnet_id": "subnet-07a8f6ec6d5752055"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a93eb0995bb458b5",
            "route_table_id": "rtb-0dfd7dfd9cddfab67",
            "subnet_id": "subnet-0966302b8dca9300d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd1d5be3ddcffe50",
            "route_table_id": "rtb-0dfd7dfd9cddfab67",
            "subnet_id": "subnet-09beac8f5727ae97d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1da4984389db28b",
            "route_table_id": "rtb-0dfd7dfd9cddfab67",
            "subnet_id": "subnet-08db95061b5062b66"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:subnet/subnet-0e35c11e02ebf4462",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e35c11e02ebf4462",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529351201608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_extension-private-eu-west-2a"
            },
            "tags_all": {
              "Name": "terraform_extension-private-eu-west-2a"
            },
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:subnet/subnet-03f8ad19406218719",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f8ad19406218719",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529351201608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_extension-private-eu-west-2b"
            },
            "tags_all": {
              "Name": "terraform_extension-private-eu-west-2b"
            },
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:subnet/subnet-07a8f6ec6d5752055",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "172.31.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a8f6ec6d5752055",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529351201608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_extension-private-eu-west-2c"
            },
            "tags_all": {
              "Name": "terraform_extension-private-eu-west-2c"
            },
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:subnet/subnet-0966302b8dca9300d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0966302b8dca9300d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529351201608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_extension-public-eu-west-2a"
            },
            "tags_all": {
              "Name": "terraform_extension-public-eu-west-2a"
            },
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:subnet/subnet-09beac8f5727ae97d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09beac8f5727ae97d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529351201608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_extension-public-eu-west-2b"
            },
            "tags_all": {
              "Name": "terraform_extension-public-eu-west-2b"
            },
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:subnet/subnet-08db95061b5062b66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "172.31.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08db95061b5062b66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529351201608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_extension-public-eu-west-2c"
            },
            "tags_all": {
              "Name": "terraform_extension-public-eu-west-2c"
            },
            "vpc_id": "vpc-06e4dd9217e765e3e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:vpc/vpc-06e4dd9217e765e3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-07d1b03831402a77a",
            "default_route_table_id": "rtb-0d09d346e3093c03d",
            "default_security_group_id": "sg-0eda496de83f0a07f",
            "dhcp_options_id": "dopt-0d1d66c6f198b4ca2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e4dd9217e765e3e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d09d346e3093c03d",
            "owner_id": "529351201608",
            "tags": {
              "Name": "terraform_extension"
            },
            "tags_all": {
              "Name": "terraform_extension"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}